tools/sddl/assembler/tests/success/math_add_basic.asm
# Test: math.add - addition
# Stack: ... I64 I64 → ... I64
push.i32 10
push.i32 20
math.add
halt
