tools/sddl/assembler/tests/fail/cmp_ge_with_param.asm
# EXPECT-ERROR: Unknown instruction or unexpected token
push.i32 10
push.i32 20
cmp.ge 1
halt
